--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>About Me</title>
     </head>
     <body>
-        <h1>Hobbies</h1>
-        <H2>& Interests</H2>
+        <h1>About Me</h1>
+        <H2>Hobbies & Interests</H2>
         <p>Living in New York, my hobbies vary depending on the season. Right now, my current hobbies are taking long walks in the park, biking to and from work, and spending time outside with friends.</p>
         <P>Some of my ongoing hobbies include:</P>
         <ol>
