--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li>Cooking</li>
             <li>Reading</li>
         </ol>
-        <img src="https://media.self.com/photos/628e481b77d608f44f5f5abe/1:1/w_3481,h_3481,c_limit/what-is-pilates.jpeg" alt="Pilates">
+        <img src="https://22808452.fs1.hubspotusercontent-na1.net/hubfs/22808452/timo-wagner-fT6-YkB0nfg-unsplash%20(1).jpg" alt="New York">
         <h1>Career Goals</h1>
         <p>I currently work for a fintech firm as a digital marketer, and I want to continue to grow my skills as a marketer and eventually work for a dermatologist or skincare brand. My current brand obsession is <a href="https://dridriss.com">Dr. Idriss</a></p>
     </body>  
